FreedomSanboxAntDeploy/src/objects/Product_Manufacturer_Master__c.object
<CustomObject>
    <description>Created for product master</description>
    <fields>
        <fullName>CustomUniqueKey__c</fullName>
        <label>CustomUniqueKey</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Master</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <description>Product master</description>
        <label>Short Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Manufacturer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Code__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Manufacturers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>